--- a/ProjectWeek/src/main/res/layout/fragment_main.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_main.xml
@@ -8,9 +8,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content">
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_margin="10dp"
+            android:text="@string/bluetooth_off"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:layout_margin="10dp"
+            android:text="Toggle Bluetooth"
+            android:id="@+id/button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+    </LinearLayout>
 
 </RelativeLayout>
