--- a/ProjectWeek/src/main/res/values/styles.xml
+++ b/ProjectWeek/src/main/res/values/styles.xml
@@ -5,4 +5,12 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="MyTheme" parent="@android:style/Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+    </style>
+
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#355C7C</item>
+    </style>
+
 </resources>
