--- a/ProjectWeek/src/main/res/layout/fragment_connexion.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_connexion.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/bluetooth"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Bluetooth"/>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
