--- a/ProjectWeek/src/main/res/layout/item_categorie.xml
+++ b/ProjectWeek/src/main/res/layout/item_categorie.xml
@@ -6,12 +6,11 @@
     android:id="@+id/linear">
 
     <TextView
-        android:padding="20dp"
+        android:paddingLeft="106px"
         android:id="@+id/text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="25dp"
-        android:textStyle="bold"
         android:textColor="@android:color/white"
         android:text="Sample"/>
 </LinearLayout>
