--- a/ProjectWeek/src/main/res/layout/item_categorie.xml
+++ b/ProjectWeek/src/main/res/layout/item_categorie.xml
@@ -6,7 +6,7 @@
     android:id="@+id/linear">
 
     <TextView
-        android:paddingLeft="106px"
+        android:paddingLeft="70dp"
         android:id="@+id/text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
