--- a/ProjectWeek/src/main/res/layout/item_categorie.xml
+++ b/ProjectWeek/src/main/res/layout/item_categorie.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/linear">
-
-    <TextView
-        android:paddingLeft="70dp"
-        android:id="@+id/text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="25dp"
-        android:textColor="@android:color/white"
-        android:text="Sample"/>
-</LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingLeft="70dp"
+    android:id="@+id/text"
+    android:gravity="center_vertical"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:textSize="25dp"
+    android:textColor="@android:color/white"
+    android:text="Sample" />
