--- a/ProjectWeek/src/main/res/layout/fragment_event.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_event.xml
@@ -2,10 +2,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" android:background="#292A36">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#292A36"
+        android:overScrollFooter="@null"
         android:id="@+id/listView" />
 </LinearLayout>
