--- a/ProjectWeek/src/main/res/layout/fragment_connexion.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_connexion.xml
@@ -10,61 +10,57 @@
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="25dp">
+        android:gravity="center_horizontal"
+        android:paddingTop="50dp">
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_marginRight="50dp">
 
-            <Button
+            <ImageView
                 android:id="@+id/signUpWithFacebookBt"
-                android:layout_height="50dp"
-                android:layout_width="50dp"
-                android:background="@drawable/icone_facebook" />
+                android:src="@drawable/icone_facebook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/signUpWithFacebookTxt"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/signUpWithFacebook"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="10sp"/>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
-            <Button
+            <ImageView
                 android:id="@+id/signUpBt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=">"
-                android:background="@color/background_Orange" />
+                android:src="@drawable/icone_signup" />
+
+            <TextView
+                android:id="@+id/signUpTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/signUp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="10sp"/>
         </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ButtonTxt"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/signUpWithFacebookTxt"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:text="@string/signUpWithFacebook"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/signUpTxt"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/signUp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
@@ -76,7 +72,7 @@
         android:gravity="center"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:paddingTop="25dp"
+        android:paddingTop="50dp"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -85,6 +81,12 @@
         android:layout_marginLeft="@dimen/login_LeftRightMargin"
         android:layout_marginRight="@dimen/login_LeftRightMargin"
         android:layout_margin="20dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/icone_profil"
+            android:background="@color/background_DarkBrown" />
 
         <EditText
             android:id="@+id/login"
@@ -104,6 +106,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/login_LeftRightMargin"
         android:layout_marginRight="@dimen/login_LeftRightMargin">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/icone_cadena"
+            android:background="@color/background_DarkBrown" />
 
         <EditText
             android:id="@+id/password"
