--- a/ProjectWeek/src/main/res/layout/fragment_manage.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_manage.xml
@@ -1,20 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Donner mon avis"
-        android:id="@+id/button1"/>
+        android:background="@color/color1"
+        android:gravity="center"
+        android:id="@+id/button1"
+        android:layout_weight="1">
 
-    <Button
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textColor="@color/color7"
+            android:text="DONNE TON"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/op_violet"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Voir les avis"
-        android:id="@+id/button2" />
+        android:background="@color/color7"
+        android:gravity="center"
+        android:id="@+id/button2"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@color/color1"
+            android:text="VOIS LES"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/op_jaune"/>
+
+    </LinearLayout>
 </LinearLayout>
