--- a/ProjectWeek/src/main/res/layout/fragment_connexion.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_connexion.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:layout_centerInParent="true"
-    android:background="@color/background_Brown">
+    android:background="@color/color6">
 
     <LinearLayout
         android:id="@+id/header"
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        android:paddingTop="50dp">
+        android:layout_marginTop="50dp">
 
         <LinearLayout
+            android:id="@+id/signUpWithFacebookBt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -23,43 +24,40 @@
             android:layout_marginRight="50dp">
 
             <ImageView
-                android:id="@+id/signUpWithFacebookBt"
                 android:src="@drawable/icone_facebook"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/signUpWithFacebookTxt"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_width="wrap_content"
                 android:text="@string/signUpWithFacebook"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@android:color/white"
-                android:textSize="10sp"/>
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/signUpBt"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
             <ImageView
-                android:id="@+id/signUpBt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icone_signup" />
+                android:src="@drawable/icone_facebook" />
 
             <TextView
                 android:id="@+id/signUpTxt"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@string/signUp"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@android:color/white"
-                android:textSize="10sp"/>
+                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -72,64 +70,66 @@
         android:gravity="center"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:paddingTop="50dp"
-        android:textSize="20dp" />
+        android:layout_marginTop="50dp"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/login_InfoSize"
         android:layout_marginLeft="@dimen/login_LeftRightMargin"
         android:layout_marginRight="@dimen/login_LeftRightMargin"
-        android:layout_margin="20dp">
+        android:layout_marginTop="20dp"
+        android:background="@color/color7"
+        android:gravity="center_vertical">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/icone_profil"
-            android:background="@color/background_DarkBrown" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/icone_profil"/>
 
         <EditText
             android:id="@+id/login"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:hint="@string/login"
-            android:singleLine="true"
             android:textColor="@android:color/white"
-            android:background="@color/background_DarkBrown"
+            android:background="@color/color7"
             android:textColorHint="@android:color/white"
-            android:padding="10dp"
-            android:textSize="10sp" />
+            android:paddingLeft="10dp"
+            android:textSize="12sp"
+            android:inputType="text"
+            android:singleLine="true" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/login_InfoSize"
         android:layout_marginLeft="@dimen/login_LeftRightMargin"
-        android:layout_marginRight="@dimen/login_LeftRightMargin">
+        android:layout_marginRight="@dimen/login_LeftRightMargin"
+        android:background="@color/color7"
+        android:gravity="center_vertical"
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/icone_cadena"
-            android:background="@color/background_DarkBrown" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/icone_cadena" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="@string/password"
-            android:singleLine="true"
-            android:password="true"
             android:textColor="@android:color/white"
-            android:background="@color/background_DarkBrown"
             android:textColorHint="@android:color/white"
-            android:padding="10dp"
-            android:textSize="10sp" />
+            android:textSize="12sp"
+            android:inputType="textPassword" />
     </LinearLayout>
 
+
     <LinearLayout
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/connect"
@@ -139,8 +139,6 @@
             android:layout_gravity="bottom"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
-            android:background="@color/background_Yellow"
-            android:minHeight="35dp" />
+            android:background="@color/color1" />
     </LinearLayout>
-
 </LinearLayout>
