--- a/ProjectWeek/src/main/res/values/dimens.xml
+++ b/ProjectWeek/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="login_LeftRightMargin">20dp</dimen>
-    <dimen name="subscription_Square">100dp</dimen>
-    </resources>
+    <dimen name="login_LeftRightMargin">30dp</dimen>
+    <dimen name="login_InfoSize">50dp</dimen>
+    <dimen name="buttonMargin">5dp</dimen>
+</resources>
