--- a/ProjectWeek/src/main/res/layout/fragment_manage.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_manage.xml
@@ -5,35 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/color1"
-        android:gravity="center"
         android:id="@+id/button1"
         android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:textColor="@color/color7"
-            android:text="DONNE TON"/>
-
         <ImageView
+            android:padding="10dp"
             android:layout_width="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
             android:layout_height="wrap_content"
-            android:src="@drawable/op_violet"/>
+            android:id="@+id/account"
+            android:src="@drawable/icone_profil_violet"/>
 
-    </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="35sp"
+                android:textColor="@color/color7"
+                android:text="DONNE TON" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/op_violet" />
+
+        </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/color7"
         android:gravity="center"
         android:id="@+id/button2"
@@ -43,15 +59,15 @@
             android:id="@+id/text2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="35sp"
             android:gravity="center"
             android:textColor="@color/color1"
-            android:text="VOIS LES"/>
+            android:text="VOIS LES" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/op_jaune"/>
+            android:src="@drawable/op_jaune" />
 
     </LinearLayout>
 </LinearLayout>
