--- a/ProjectWeek/src/main/res/layout/item_categorie.xml
+++ b/ProjectWeek/src/main/res/layout/item_categorie.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingLeft="70dp"
-    android:id="@+id/text"
-    android:gravity="center_vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:textSize="25dp"
-    android:textColor="@android:color/white"
-    android:text="Sample" />
+    android:gravity="center_vertical"
+    android:layout_width="match_parent">
+
+    <ImageView
+        android:paddingLeft="35dp"
+        android:id="@+id/icone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icone_coiffeur"
+        android:contentDescription="@string/none" />
+
+    <TextView
+        android:paddingLeft="35dp"
+        android:id="@+id/text"
+        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="25sp"
+        android:textColor="@android:color/white"
+        android:text="@string/sample" />
+
+</LinearLayout>
