--- a/ProjectWeek/src/main/res/layout/fragment_questionnaire.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_questionnaire.xml
@@ -1,32 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="@color/background"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:gravity="center"
-        android:layout_centerInParent="true">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/shareButton"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/text_number"
             android:layout_width="wrap_content"
-            android:text="Share" />
-
-        <Button
-            android:id="@+id/imageButton"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:text="Take a Picture :)" />
+            android:text="1"
+            android:textStyle="bold"
+            android:textSize="60sp"
+            android:textColor="@android:color/white" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/"
+            android:padding="5dp"
+            android:textStyle="bold"
+            android:textSize="60sp"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/text_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3"
+            android:textStyle="bold"
+            android:textSize="60sp"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
-</RelativeLayout>
+
+    <TextView
+        android:padding="10dp"
+        android:gravity="center"
+        android:id="@+id/question"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:text="Que pensez vous de la nouvelle collection printemps/été ?"/>
+
+    <LinearLayout
+        android:padding="10dp"
+        android:id="@+id/container"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
+
+    <!--<LinearLayout--><!--android:orientation="vertical"--><!--android:layout_height="wrap_content"--><!--android:layout_width="wrap_content"--><!--android:gravity="center"--><!--android:layout_centerInParent="true">-->
+
+    <!--<Button--><!--android:id="@+id/shareButton"--><!--android:layout_height="wrap_content"--><!--android:layout_width="wrap_content"--><!--android:text="Share" />-->
+
+    <!--<Button--><!--android:id="@+id/imageButton"--><!--android:layout_height="wrap_content"--><!--android:layout_width="match_parent"--><!--android:text="Take a Picture :)" />-->
+
+    <!--<ImageView--><!--android:id="@+id/image"--><!--android:layout_width="200dp"--><!--android:layout_height="200dp"/>-->
+
