--- a/ProjectWeek/src/main/res/layout/fragment_account.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_account.xml
@@ -1,6 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/color7">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/profilePicture"
+            android:src="@drawable/photo_rodolpha"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="15dp">
+
+            <TextView
+                android:id="@+id/pseudoTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Rodolpha_04"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TOTAL DES"
+                        android:textStyle="bold"
+                        android:textColor="@color/color2"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="POINTS"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:textColor="@color/color2"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="13"
+                    android:layout_marginLeft="5dp"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/color2"
+                    android:gravity="top"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/profileSeeOpTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Voir tous mes op"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:background="@color/color2"
+        android:paddingTop="@dimen/profile_line"
+        android:paddingBottom="@dimen/profile_line"
+        android:layout_marginTop="25dp"/>
+
+    <TextView
+        android:id="@+id/profileEditTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Modifier le profil"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:background="@color/color2"
+        android:padding="@dimen/profile_line"
+        android:layout_marginTop="45dp"/>
+
+    <TextView
+        android:id="@+id/profileConditionTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Conditions/Confidentialité"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:background="@color/color2"
+        android:paddingTop="@dimen/profile_line"
+        android:paddingBottom="@dimen/profile_line"
+        android:layout_marginTop="45dp"/>
+
+    <TextView
+        android:id="@+id/profileDisconnectTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Se déconnecter"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:background="@color/color2"
+        android:paddingTop="@dimen/profile_line"
+        android:paddingBottom="@dimen/profile_line"
+        android:layout_marginTop="5dp"/>
+</LinearLayout>
