--- a/ProjectWeek/src/main/res/layout/fragment_signup.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_signup.xml
@@ -6,9 +6,10 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:padding="25dp">
 
         <TextView
             android:layout_height="wrap_content"
