--- a/ProjectWeek/src/main/res/layout/fragment_signup.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_signup.xml
@@ -103,10 +103,16 @@
             android:layout_width="match_parent"
             android:inputType="date" />
 
-        <Button
-            android:id="@+id/signUp"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:text="@string/signUp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/signUp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:text="@string/signUp" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
