--- a/ProjectWeek/src/main/res/layout/fragment_connexion.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_connexion.xml
@@ -85,7 +85,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icone_pseudo"/>
+            android:src="@drawable/icone_pseudo"
+            android:layout_marginLeft="8px"/>
 
         <EditText
             android:id="@+id/login"
