--- a/ProjectWeek/src/main/res/layout/fragment_avis.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_avis.xml
@@ -33,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
+        android:textSize="14sp"
         android:text="Zara est l'une des principales entreprises internationales de mode femmes, hommes et enfants."/>
 
     <TextView
@@ -41,7 +42,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/color3"
         android:text="LES OP"
-        android:textStyle="bold"/>
+        android:id="@+id/op"
+        android:textSize="16sp"/>
 
     <ScrollView
         android:layout_width="match_parent"
