FragmentConnexion wait for SignupFragment

--- a/ProjectWeek/src/main/res/layout/fragment_avis.xml
+++ b/ProjectWeek/src/main/res/layout/fragment_avis.xml
@@ -2,24 +2,27 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:paddingTop="30dp"
+    android:paddingLeft="25dp"
+    android:paddingRight="15dp"
     android:layout_height="match_parent"
     android:background="@color/background"
     android:layout_width="match_parent">
 
     <LinearLayout
-        android:paddingTop="25dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="match_parent"
+            android:paddingRight="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:adjustViewBounds="true"
             android:src="@drawable/photo_zara"/>
 
         <TextView
-            android:layout_weight="1"
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
@@ -29,7 +32,8 @@
         </LinearLayout>
 
     <TextView
-        android:padding="15dp"
+        android:paddingTop="20dp"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
@@ -37,15 +41,18 @@
         android:text="Zara est l'une des principales entreprises internationales de mode femmes, hommes et enfants."/>
 
     <TextView
-        android:padding="10dp"
+        android:paddingTop="20dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:textColor="@color/color3"
         android:text="LES OP"
         android:id="@+id/op"
         android:textSize="16sp"/>
 
     <ScrollView
+        android:paddingTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
