--- a/ProjectWeek/src/main/res/layout/item_avis.xml
+++ b/ProjectWeek/src/main/res/layout/item_avis.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@null"
-    android:padding="10dp"
+    android:gravity="center_horizontal"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -28,6 +28,7 @@
 
             <TextView
                 android:id="@+id/title"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:text="1. Decu"
                 android:textColor="@color/color3"
@@ -41,15 +42,13 @@
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:text="Je suis plutot satisfaite de ce magasin!"/>
-
-
-            <ImageView
-                android:paddingTop="5dp"
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
         </LinearLayout>
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
